staticfiles/css/style.css
/* ... */
/* for the card plastic */
.dicount_on_card_badge{
    position: absolute;
    left: 400px;
    top:30px;
    width:150px;
}

.members_only_text{
color: white;
position: absolute;
top:150px;
left:450px;
}
/* --------------------------------------------------------------main site look */
.group-button {
    display: inline-block;
    padding: 5px 10px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    border: 1px solid var(--Yellow);
    color: var(--Yellow);
    background-color: #ffffff;
    border-radius: 5px;
    transition: background-color 0.3s, color 0.3s;
    margin: 5px; /* Add some margin between buttons */
  }

  .group-button:hover {
    background-color: var(--Yellow);
    color: var(--black);
  }
#hero-section {
    position: relative;
    color: #fff;
}

#hero-image {
    width: 100%;
    height: 834px;
    opacity: 0.5;
    background-color: #5092cb;
}

#title_hero{
    position: absolute;
    width:60%;
    top: 60%;
    left: 50px;
    font-size: 30px;
    font-weight: bolder;
}

#subtitle {
    position: absolute;
    top: 50%;
    left: 50px;
    font-weight: bolder;
}


#search-container {
    position: absolute;
    top: 10px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    background-color: white;
    width:450px;
    border-radius: 44px;
    height:56px;
}

#search-input {
    width: 70%;
    padding: 10px;
    border:none;
    outline: none; /* Remove focus border */
    line-height: 1.375rem;
    font-size: 20px;
}
#search-input::placeholder{
    font-weight: 20px;
    color: #1a2b49;
    font-size: 15px;

}


#search-button {
    width: 20%;
    padding: 10px;
    background-color: #FBB900;
    color: var(--gun-metal);
    border-radius: 20px;
    cursor: pointer;
    font-size: 1em;
    border: none;
}
#search-button:hover{
    background-color: #FEDF00;

}

#loop-icon {
    width: 10%;
    margin-left: 10px;
}

#logo-site {
    position: absolute;
    top: 10px;
    left: 35px;
    width: 300px; /* Adjust the size as needed */
    /* z-index: 1; */
}

#other-icons {
    position: absolute;
    top: 10px;
    right: 2%;
    display: grid;
    grid-template-columns: auto auto auto auto;

}

.icon {
    font-size: 20px;;
}
/* dropdown */
.site-color{
color:var(--white);
background-color: var(--Yellow);
}
.site-color:hover{
    background-color: var(--Yellow_lighter);
}

.button-container {
    text-align: center;
}

/* button {
    padding: 10px 20px;
    margin: 10px;
    font-size: 16px;
    cursor: pointer;
} */

.shoping-cart-container{
    position: relative;
    padding: 10px ;
    /* the profile has the same and it comes from bootstrap */
}

.dropdown-item {
    padding: 10px;
}

.cart-counter{
    border-radius: 50%;
    width: 20px;
    height: 20px;
    line-height: 20px;
    background-color: #FBB900;
    position: absolute;
    top:0;
    right: 10px;
    text-align: center;
}

.d-of-discovery{
    background-color: #FBB900;
    border-radius: 50%;
    padding: 10px;
    width: 10px;
    height: 10px;
}
.d{
    position: absolute;
    top:-2px;
    left:5px;
}
.subtitle-span{
    position: absolute;
    left:26px;
    top:-2px;
    width:700px
}
.square-btn-sortby{
    position: absolute;
    bottom: 0px;
    background-color: #f2f2f2;
    width:150px;
    height:60px;
    left: 300px;
    border-radius: 20px 20px 0 0;
    text-align: center;
}
.square-btn{
    position: absolute;
    bottom: 0px;
    background-color: #f2f2f2;
    width:150px;
    height:60px;
    left: 50px;
    border-radius: 20px 20px 0 0;
}

.square-btn2{
    position: absolute;
    bottom: 0px;
    background-color: #f2f2f2;
    width:150px;
    height:60px;
    left: 250px;
    border-radius: 20px 20px 0 0;

}

.main-link{
    position: absolute;
    color: #333;
    font-weight: bolder;
    padding: 20px;
    left:15px;
}
.main-link2{
    position: absolute;
    color: #333;
    font-weight: bolder;
    padding: 20px;
    left:30px;
}


.overlay {
content: "";
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
background-color: rgba(0, 0, 0, 0.5); /* Adjust the last value (0.5) for the desired transparency */
pointer-events: none; /* Allows clicks to go through the overlay to the image */
}

/* -------------------------------------------------------------------- Media queries */

/* large devices (tablet, etc 1492px and down) */
@media only screen and (max-width: 1492px) {
    .home-banner h3 {
        font-size: 50px;
    }


    .overview {
        width: 70%;
    }
    #subtitle {
        top: 65%;
    }

}

/* large devices (tablet, etc 1270px and down) */
@media only screen and (max-width: 1270px) {
    .card-container {
        grid-template-columns: auto auto auto;
    }

    /* --detail page */
    .main-image img {
        width: 400px;
        height: 400px;
    }

    .item-detail {
        width: 320px;
    }

    .photos {
        width: 400px;
    }
    .payments-container{
        width:100%; 
    }
    



}


/* large devices (tablet, etc 1042px and down) */
@media only screen and (max-width: 1042px) {

    .home-banner img {
        height: 300px;
    }

    .home-banner h3 {
        font-size: 40px;
    }

    .links-container {
        margin-left: 50px;
        display: grid;
        grid-template-columns: auto auto auto auto;
    }

    .cart-container {
        grid-template-columns: auto;
    }

}
/* ... */

